dosya ayarları ve convert güncellemesi